@@ -1,3 +1,15 @@
+2018-01-10  Carlos Alberto Lopez Perez  <clopez@igalia.com>
+
+        Add a JSCOnly MIPS buildbot
+        https://bugs.webkit.org/show_bug.cgi?id=181487
+
+        Reviewed by Michael Catanzaro.
+
+        Add the new bot configs definitions for the master and update the unit tests.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+        * BuildSlaveSupport/build.webkit.org-config/steps_unittest.py:
+
 2018-01-10  Jonathan Bedard  <jbedard@apple.com>
 
         REGRESSION (r226715): don't re-check number of simulators in child processes
